--- a/app/br/ufes/scap/views/addUser.scala.html
+++ b/app/br/ufes/scap/views/addUser.scala.html
@@ -19,7 +19,7 @@
               <h1><font face="trebuchet ms" color="white"> Registrar Novo Usuário </font></h1>
             <br/>
 
-                <font color="white" face="trebuchet ms">Nome &nbsp;&nbsp </font>  
+                <font color="white" face="trebuchet ms">Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
                 <input type="text" id="nome" name="nome" value="" placeholder="Nome" required>
                 <br>
 
@@ -32,20 +32,20 @@
 
 		<br>
 
-                <font color="white" face="trebuchet ms">E-mail&nbsp;&nbsp </font>  
+                <font color="white" face="trebuchet ms">E-mail&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </font>  
                 <input type="text"  id="email" name="email" value="" placeholder="Email"
                        required>
 		<br>
 		<br>
 
-                <font color="white" face="trebuchet ms">Senha  &nbsp;&nbsp </font>  
+                <font color="white" face="trebuchet ms">Senha  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
                 <input type="password" id="password" name="password" value="" placeholder="Senha"
                        required>
                 <br>
 
 		<br>
 
-            <font color="white" face="trebuchet ms">Tipo &nbsp;&nbsp </font>  
+            <font color="white" face="trebuchet ms">Tipo &nbsp;&nbsp;&nbsp;&nbsp </font>  
 		<select id=tipo name="tipo" value="">
     			<option value="PROFESSOR">PROFESSOR(A)</option>
     			<option value="SECRETARIO">SECRETARIO(A)</option>
