--- a/app/br/ufes/scap/views/menu.scala.html
+++ b/app/br/ufes/scap/views/menu.scala.html
@@ -12,34 +12,34 @@
 <br>
 <table  border="5"><tr><th><h1><font face="trebuchet ms" color="white">Menu Principal</font></h1></th></tr>
 <tr>
-<td><a href="@br.ufes.scap.controllers.routes.UsersController.editUser(user.get.id)"><font color="yellow" face="trebuchet ms">Editar seu perfil</font></a></td>
+<td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.UsersController.editUser(user.get.id)"><font color="yellow" face="trebuchet ms">Editar seu perfil</font></a></td>
 </tr>
 <tr>
-<td><a href="@br.ufes.scap.controllers.routes.SolicitacoesController.listarSolicitacoes"><font color="yellow" face="trebuchet ms">Listar Solicitações</font></a></td>
+<td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.UsersController.listarUsuarios"><font color="yellow" face="trebuchet ms">Listar Usuários</font></a></td>
 </tr>
 <tr>
-<td><a href="@br.ufes.scap.controllers.routes.MandatosController.listarMandatos"><font color="yellow" face="trebuchet ms">Listar Mandatos</font></a></td>
+<td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.SolicitacoesController.listarSolicitacoes"><font color="yellow" face="trebuchet ms">Listar Solicitações</font></a></td>
 </tr>
 <tr>
-<td><a href="@br.ufes.scap.controllers.routes.ParentescosController.listarParentescos"><font color="yellow" face="trebuchet ms">Listar Parentescos</font></a></td>
+<td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.MandatosController.listarMandatos"><font color="yellow" face="trebuchet ms">Listar Mandatos</font></a></td>
+</tr>
+<tr>
+<td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.ParentescosController.listarParentescos"><font color="yellow" face="trebuchet ms">Listar Parentescos</font></a></td>
 </tr>
 @if(user.get.tipo.equals("PROFESSOR")){
 <tr>
-<td><a href="@br.ufes.scap.controllers.routes.SolicitacoesController.addSolicitacaoForm"><font color="yellow" face="trebuchet ms">Adicionar Solicitação</font></a></td>
+<td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.SolicitacoesController.addSolicitacaoForm"><font color="yellow" face="trebuchet ms">Adicionar Solicitação</font></a></td>
 </tr>
 }
 @if(user.get.tipo.equals("SECRETARIO")){
 <tr>
-<td><a href="@br.ufes.scap.controllers.routes.UsersController.listarUsuarios"><font color="yellow" face="trebuchet ms">Listar Usuários</font></a></td>
+<td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.UsersController.addUserForm"><font color="yellow" face="trebuchet ms">Adicionar Usuário</font></a></td>
 </tr>
 <tr>
-<td><a href="@br.ufes.scap.controllers.routes.UsersController.addUserForm"><font color="yellow" face="trebuchet ms">Adicionar Usuário</font></a></td>
+<td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.MandatosController.addMandatoForm"><font color="yellow" face="trebuchet ms">Adicionar Mandato</font></a></td>
 </tr>
 <tr>
-<td><a href="@br.ufes.scap.controllers.routes.MandatosController.addMandatoForm"><font color="yellow" face="trebuchet ms">Adicionar Mandato</font></a></td>
-</tr>
-<tr>
-<td><a href="@br.ufes.scap.controllers.routes.ParentescosController.addParentescoForm()"><font color="yellow" face="trebuchet ms">Adicionar Parentesco</font></a></td>
+<td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.ParentescosController.addParentescoForm()"><font color="yellow" face="trebuchet ms">Adicionar Parentesco</font></a>&nbsp;&nbsp</td>
 </tr>
 </table>
 <br>
