--- a/app/br/ufes/scap/views/addMandato.scala.html
+++ b/app/br/ufes/scap/views/addMandato.scala.html
@@ -15,7 +15,7 @@
 		<h1><font face="trebuchet ms" color="white">Registrar Novo Mandato</font></h1>
 
 
-            <font color="white" face="trebuchet ms">Professor &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
+            <font color="white" face="trebuchet ms">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;&nbsp&nbsp Professor &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp </font>  
 		<select id=idProfessor name="idProfessor" value="">
 		@for(user <- users){
     			<option value=@user.id>@user.nome</option>
@@ -25,7 +25,7 @@
 		<br>
 		<br>
 
-            <font color="white" face="trebuchet ms">&nbsp;&nbsp;&nbsp;&nbsp Cargo &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
+            <font color="white" face="trebuchet ms">&nbsp;&nbsp;&nbsp;&nbsp Cargo &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
 		<select id=cargo name="cargo" value="">
     			<option value="PRESIDENTE">PRESIDENTE</option>
     			<option value="VICE-PRESIDENTE">VICE-PRESIDENTE</option>
@@ -41,7 +41,7 @@
 		<br>
 		<br>
 
-                  <font color="white" face="trebuchet ms">Fim do mandato &nbsp;&nbsp </font>  
+                  <font color="white" face="trebuchet ms">Fim do mandato &nbsp;&nbsp;&nbsp;&nbsp </font>  
   			<input type="date" id="dataFimMandato" name="dataFimMandato" value="" required> 
   		
 		<br>
