--- a/app/br/ufes/scap/views/listPareceres.scala.html
+++ b/app/br/ufes/scap/views/listPareceres.scala.html
@@ -3,63 +3,64 @@
 
 <html>
 
-<a href="@br.ufes.scap.controllers.routes.LoginController.logout">Logout</a>
+<form align="right">
+<a href="@br.ufes.scap.controllers.routes.LoginController.logout"><font color="yellow" face="trebuchet ms">Logout</font></a>
+</form>
 
 <body bgcolor="teal"  >
+<fieldset>
 <h1><font color="white" face="trebuchet ms"> Pareceres</h1></font>
 
 <fieldset>
 <h1><font color="white" face="trebuchet ms"> Pareceres internos do DI </h1></font>
  
-<table style="width:100%">
+<table style="width:100%"  border="5">
                 <tr>
-                    <th>PROFESSOR</th>
-                    <th>JULGAMENTO</th>
-			  <th>VER MAIS DETALHES</th>
+                    <th><font color="white" face="trebuchet ms">&nbsp;&nbsp PROFESSOR &nbsp;&nbsp</font></th>
+                    <th><font color="white" face="trebuchet ms">&nbsp;&nbsp JULGAMENTO &nbsp;&nbsp</font></th>
+                    <th><font color="white" face="trebuchet ms">&nbsp;&nbsp VER MAIS DETALHES &nbsp;&nbsp</font></th>
                 </tr>
                 @for(p <- pareceres){
                 <tr>
-                    <td>@p.professor.nome</td>
-                    <td>@p.julgamento</td>
-                    <td><a href="@br.ufes.scap.controllers.routes.PareceresController.verParecer(p.id)">Ver mais detalhes</a></td>
+                    <td><font color="white" face="trebuchet ms">&nbsp;&nbsp @p.professor.nome&nbsp;&nbsp</font></td>
+                    <td><font color="white" face="trebuchet ms">&nbsp;&nbsp @p.julgamento&nbsp;&nbsp</font></td>
+                    <td>&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.PareceresController.verParecer(p.id)"><font color="yellow" face="trebuchet ms">Ver mais detalhes</font></a>&nbsp;&nbsp</td>
                 </tr>
                 }
 </table>
+</fieldset>
+<br>
+<br>
+<br>
+
 <fieldset>
-<br>
-<br>
-<br>
+<h1><font color="white" face="trebuchet ms">Pareceres externos </font></h1>
 
-<h1> Pareceres externos </h1>
-
-<table style="width:100%">
+<table style="width:100%" border="5">
                 <tr>
-                    <th>TIPO</th>
-                    <th>JULGAMENTO</th>
-			  <th>VER MAIS DETALHES</th>
+                    <th><font color="white" face="trebuchet ms">&nbsp;&nbsp TIPO &nbsp;&nbsp</font></th>
+                    <th><font color="white" face="trebuchet ms">&nbsp;&nbsp JULGAMENTO &nbsp;&nbsp</font></th>
+                    <th><font color="white" face="trebuchet ms">&nbsp;&nbsp VER MAIS DETALHES &nbsp;&nbsp</font></th>
                 </tr>
                 @for(p <- PareceresDocumento){
                 <tr>
-                    <td>@p.tipo</td>
-                    <td>@p.julgamento</td>
-                    <td><a href="@br.ufes.scap.controllers.routes.PareceresDocumentoController.verParecer(p.id)">Ver mais detalhes</a></td>
+                    <td><font color="white" face="trebuchet ms">&nbsp;&nbsp @p.tipo &nbsp;&nbsp</font></td>
+                    <td><font color="white" face="trebuchet ms">&nbsp;&nbsp @p.julgamento &nbsp;&nbsp</font></td>
+                    <td>&nbsp;&nbsp <a href="@br.ufes.scap.controllers.routes.PareceresDocumentoController.verParecer(p.id)"><font color="yellow" face="trebuchet ms">Ver mais detalhes</font></a>&nbsp;&nbsp</td>
                 </tr>
                 }
 </table>
-
-</body>
-
+</fieldset>
 
 <br>
+</fieldset>
 <br>
-
 <br>
-<form id="parentesco-add-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get"
-      class="form-horizontal" align="center" autocomplete="off">
-            <div class="form-actions controls ynt-btn-xlarge">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Voltar ao Menu Principal</button>
-            </div>
+<br>
+<br>
+<form align="left">
+<a href="@br.ufes.scap.controllers.routes.LoginController.menu()"><font color="yellow" face="trebuchet ms">Voltar ao Menu Principal</font></a>
 </form>
-
+</body>
 </html>
 }
