--- a/app/br/ufes/scap/views/listUsers.scala.html
+++ b/app/br/ufes/scap/views/listUsers.scala.html
@@ -1,4 +1,7 @@
-@(userForm: Form[br.ufes.scap.models.UserFormData],users : Seq[br.ufes.scap.models.User])(implicit request: RequestHeader)
+@(userForm: Form[br.ufes.scap.models.UserFormData],users : Seq[br.ufes.scap.models.User], role : String)(implicit request: RequestHeader)
+
+@import br.ufes.scap.models.TipoUsuario
+
 @main() {
 <html>
 
@@ -21,9 +24,10 @@
                     <th><font color="white" face="trebuchet ms">&nbsp;&nbsp E-MAIL &nbsp;&nbsp</th>
                     <th><font color="white" face="trebuchet ms">&nbsp;&nbsp TIPO &nbsp;&nbsp</th>
 			  <th><font color="white" face="trebuchet ms">&nbsp;&nbsp MANDATOS &nbsp;&nbsp</th>
+			  <th><font color="white" face="trebuchet ms">&nbsp;&nbsp AFASTAMENTOS &nbsp;&nbsp</th>
+			  @if(role.equals(TipoUsuario.Sec.toString())) {
 			  <th><font color="white" face="trebuchet ms">&nbsp;&nbsp DELETAR &nbsp;&nbsp </th>
-			  <th><font color="white" face="trebuchet ms">&nbsp;&nbsp EDITAR &nbsp;&nbsp </th>
-
+			  }
                 </tr>
                 @for(user <- users){
                 <tr>
@@ -33,8 +37,10 @@
                     <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @user.email &nbsp;&nbsp </font></td>
 			  <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @user.tipo &nbsp;&nbsp </font></td>
                     <td>&nbsp;&nbsp <a href="@br.ufes.scap.controllers.routes.MandatosController.showMandatosByProfessor(user.id)"><font color="yellow" face="trebuchet ms">ver mandatos</font></a>&nbsp;&nbsp</td> 
+                    <td>&nbsp;&nbsp <a href="@br.ufes.scap.controllers.routes.SolicitacoesController.showAfastamentosByProfessor(user.id)"><font color="yellow" face="trebuchet ms">ver afastamentos</font></a>&nbsp;&nbsp</td> 
+			  @if(role.equals(TipoUsuario.Sec.toString())) {
                     <td>&nbsp;&nbsp<a onclick="return confirm('Você tem certeza de que deseja excluir esse professor?');" href="@br.ufes.scap.controllers.routes.UsersController.deleteUser(user.id)"><font color="yellow" face="trebuchet ms">deletar</font></a>&nbsp;&nbsp</td> 
-                    <td>&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.UsersController.editUser(user.id)"><font color="yellow" face="trebuchet ms">editar</font></a>&nbsp;&nbsp</td>  
+			  }
                 </tr>
                 }
 </table>
