--- a/app/br/ufes/scap/views/verParecer.scala.html
+++ b/app/br/ufes/scap/views/verParecer.scala.html
@@ -4,17 +4,46 @@
 @import java.time.format.TextStyle
 
 @main() {
+<body  bgcolor="teal">
 
+<form align="right">
+<a href="@br.ufes.scap.controllers.routes.LoginController.logout"><font color="yellow" face="trebuchet ms">Logout</font></a>
+</form>
+
+<fieldset>
+<h1><font color="white" face="trebuchet ms">Dados do Parecer</font></h1>
+
+<font color="white" face="trebuchet ms"> * Parecer emitido para a solicitacao de afastamento do professor @parecer.solicitacao.professor.nome em virtude do evento @parecer.solicitacao.nomeEvento</font>
 <br>
-<p>Julgamento: @parecer.julgamento</p>
-<p>Motivo: @parecer.motivo</p>
-<p>Autor do Parecer: @parecer.professor.nome</p>
-<p>Data em que o Parecer foi emitido: @parecer.dataParecer.getDayOfMonth() de @parecer.dataParecer.getMonth().getDisplayName(TextStyle.FULL, new Locale("pt")) de @parecer.dataParecer.getYear()</p>
-<p>Solicitação do(a) professor(a) @parecer.solicitacao.professor.nome para o evento @parecer.solicitacao.nomeEvento</p>
+<br>
+
+<table style="width:100%" border="5" >
+ 		    <tr>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp ID &nbsp;&nbsp </font> </td>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @parecer.id &nbsp;&nbsp </font> </td>
+                </tr>
+                <tr>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp AUTOR &nbsp;&nbsp </font> </td>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @parecer.professor.nome &nbsp;&nbsp </font> </td>
+                </tr>
+                <tr>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp DATA DE EMISSÃO &nbsp;&nbsp </font> </td>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @parecer.dataParecer.getDayOfMonth() de @parecer.dataParecer.getMonth().getDisplayName(TextStyle.FULL, new Locale("pt")) de @parecer.dataParecer.getYear() &nbsp;&nbsp </font> </td>
+                </tr>
+                <tr>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp JULGAMENTO &nbsp;&nbsp </font> </td>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @parecer.julgamento &nbsp;&nbsp </font> </td>
+                </tr>
+                <tr>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp MOTIVO &nbsp;&nbsp  </font> </td>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @parecer.motivo &nbsp;&nbsp </font> </td>
+                </tr>
+</table>
 <br>
 <br>
-<form id="user-list-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get"
-      class="form-horizontal" align="center" autocomplete="off">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Voltar ao Menu Principal</button>
+<br>
+<br>
+<form align="left">
+<a href="@br.ufes.scap.controllers.routes.LoginController.menu()"><font color="yellow" face="trebuchet ms">Voltar ao Menu Principal</font></a>
 </form>
 }
