--- a/app/br/ufes/scap/views/verParecerDocumento.scala.html
+++ b/app/br/ufes/scap/views/verParecerDocumento.scala.html
@@ -4,33 +4,48 @@
 @import java.time.format.TextStyle
 
 @main() {
+<body  bgcolor="teal">
 
-<p>Julgamento: @parecer.julgamento</p>
-<br>
-<br>
-<p>Origem: @parecer.tipo</p>
-<br>
-<br>
-Data em que o Parecer foi emitido: @parecer.dataParecer.getDayOfMonth() de @parecer.dataParecer.getMonth().getDisplayName(TextStyle.FULL, new Locale("pt")) de @parecer.dataParecer.getYear()
-<br>
-<br>
-Solicitacao para o Evento: @parecer.solicitacao.nomeEvento
-Solicitacao feita pelo professor: @parecer.solicitacao.professor.nome
-<br>
-<br>
-<br>
-<p>Documento: (O download será feito para a pasta "Pareceres" na raiz de instalação do sistema)</p>
-<br>
-<form action="@br.ufes.scap.controllers.routes.PareceresDocumentoController.DownloadFile(parecer.id)" align="center" method="get">
-  <input type="submit" value="Download">
+<form align="right">
+<a href="@br.ufes.scap.controllers.routes.LoginController.logout"><font color="yellow" face="trebuchet ms">Logout</font></a>
 </form>
+
+<fieldset>
+<h1><font color="white" face="trebuchet ms">Dados do Parecer</font></h1>
+
+<font color="white" face="trebuchet ms"> * Parecer emitido para a solicitacao de afastamento do professor @parecer.solicitacao.professor.nome em virtude do evento @parecer.solicitacao.nomeEvento</font>
+<br>
+<br>
+
+<table style="width:100%" border="5" >
+ 		    <tr>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp ID &nbsp;&nbsp </font> </td>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @parecer.id &nbsp;&nbsp </font> </td>
+                </tr>
+                <tr>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp ÓRGÃO &nbsp;&nbsp </font> </td>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @parecer.tipo &nbsp;&nbsp </font> </td>
+                </tr>
+                <tr>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp DATA DE EMISSÃO &nbsp;&nbsp </font> </td>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @parecer.dataParecer.getDayOfMonth() de @parecer.dataParecer.getMonth().getDisplayName(TextStyle.FULL, new Locale("pt")) de @parecer.dataParecer.getYear() &nbsp;&nbsp </font> </td>
+                </tr>
+                <tr>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp JULGAMENTO &nbsp;&nbsp </font> </td>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @parecer.julgamento &nbsp;&nbsp </font> </td>
+                </tr>
+                <tr>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp DOCUMENTO &nbsp;&nbsp  </font> </td>
+			  <td>&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.PareceresDocumentoController.DownloadFile(parecer.id)"><font color="yellow" face="trebuchet ms">Download</font></a>&nbsp;&nbsp</td>
+                </tr>
+</table>
 <br>
 <br>
 <br>
 <br>
-<br>
-<form id="user-list-form" role="form" action='@br.ufes.scap.controllers.routes.LoginController.menu()' method="get"
-      class="form-horizontal" align="center" autocomplete="off">
-                <button type="submit" class="btn btn-primary ynt-btn-orange">Voltar ao Menu Principal</button>
+<form align="left">
+<a href="@br.ufes.scap.controllers.routes.LoginController.menu()"><font color="yellow" face="trebuchet ms">Voltar ao Menu Principal</font></a>
 </form>
+
+</body>
 }
