--- a/app/br/ufes/scap/views/addParecerDocumento.scala.html
+++ b/app/br/ufes/scap/views/addParecerDocumento.scala.html
@@ -6,7 +6,7 @@
 
     @parecerDocumentoForm.globalError.map { error =>
         <p class="error">
-            @error.message
+            <font face="trebuchet ms" color="yellow">@error.message </font>
         </p>
 	}
 
