--- a/app/br/ufes/scap/views/addSolicitacao.scala.html
+++ b/app/br/ufes/scap/views/addSolicitacao.scala.html
@@ -25,7 +25,7 @@
 		<br>
 		<br>
 
-                  <font color="white" face="trebuchet ms">Data de fim do afastamento &nbsp;&nbsp </font>  
+                  <font color="white" face="trebuchet ms">Data de fim do afastamento &nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
   			<input type="date" id="dataFimAfast" name="dataFimAfast" value="" required> 
   			<br>
 
@@ -33,7 +33,7 @@
 		<br>
 
 
-                  <font color="white" face="trebuchet ms">Data de início do evento &nbsp;&nbsp </font>  
+                  <font color="white" face="trebuchet ms">Data de início do evento &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
   			<input type="date" id="dataIniEvento" name="dataIniEvento" value="" required> 
   			<br>
 
@@ -41,28 +41,28 @@
 		<br>
 
 
-                  <font color="white" face="trebuchet ms">Data de fim do evento &nbsp;&nbsp </font>  
+                  <font color="white" face="trebuchet ms">Data de fim do evento &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp</font>  
   			<input type="date" id="dataFimEvento" name="dataFimEvento" value="" required> 
   			<br>
 
 		<br>
 		<br>
 
- 		    <font color="white" face="trebuchet ms">Nome do Evento &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
+ 		    <font color="white" face="trebuchet ms">Nome do Evento &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
                 <input type="text" id="nomeEvento" name="nomeEvento" value="" placeholder="nome do evento" required>
                 <br>
 
 		<br>
 		<br>
 
- 		    <font color="white" face="trebuchet ms">Cidade do Evento &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
+ 		    <font color="white" face="trebuchet ms">Cidade do Evento &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
                 <input type="text" id="cidade" name="cidade" value="" placeholder="cidade do evento" required>
                 <br>
 
 		<br>
 		<br>
 
- 		    <font color="white" face="trebuchet ms">Onus &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
+ 		    <font color="white" face="trebuchet ms">Onus &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
 		<select id=onus name="onus" value="">
     			<option value="INEXISTENTE">INEXISTENTE</option>
     			<option value="PARCIAL">PARCIAL</option>
@@ -72,7 +72,7 @@
 		<br>
 		<br>
 
- 		    <font color="white" face="trebuchet ms">Tipo do Afastamento &nbsp;&nbsp </font>  
+ 		    <font color="white" face="trebuchet ms">Tipo do Afastamento &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font>  
 		<select id=tipoAfastamento name="tipoAfastamento" value="">
     			<option value="NACIONAL">NACIONAL</option>
     			<option value="INTERNACIONAL">INTERNACIONAL</option>
@@ -87,8 +87,6 @@
 
     </fieldset>
 </form>
-
-<br>
 <br>
 		
 <form align="left">
