--- a/app/br/ufes/scap/views/menu.scala.html
+++ b/app/br/ufes/scap/views/menu.scala.html
@@ -10,12 +10,12 @@
 <body  bgcolor="teal">
 <br>
 <br>
-<table  border="5"><tr><th><h1><font face="trebuchet ms" color="white">Menu Principal</font></h1></th></tr>
+<table  border="5" align="center"><tr><th><h1><font face="trebuchet ms" color="white">Menu Principal</font></h1></th></tr>
 <tr>
 <td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.UsersController.editUser(user.get.id)"><font color="yellow" face="trebuchet ms">Editar seu perfil</font></a></td>
 </tr>
 <tr>
-<td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.UsersController.listarUsuarios"><font color="yellow" face="trebuchet ms">Listar Usuários</font></a></td>
+<td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.UsersController.listarUsuarios"><font color="yellow" face="trebuchet ms">Listar Professores</font></a></td>
 </tr>
 <tr>
 <td>&nbsp;&nbsp;&nbsp<a href="@br.ufes.scap.controllers.routes.SolicitacoesController.listarSolicitacoes"><font color="yellow" face="trebuchet ms">Listar Solicitações</font></a></td>
