--- a/app/br/ufes/scap/views/addParecerContra.scala.html
+++ b/app/br/ufes/scap/views/addParecerContra.scala.html
@@ -3,7 +3,7 @@
 
     @manifestacaoForm.globalError.map { error =>
         <p class="error">
-            @error.message
+            <font face="trebuchet ms" color="yellow">@error.message </font>
         </p>
 	}
 
