--- a/app/br/ufes/scap/views/listUsers.scala.html
+++ b/app/br/ufes/scap/views/listUsers.scala.html
@@ -1,4 +1,4 @@
-@(userForm: Form[br.ufes.scap.models.UserFormData],users : Seq[br.ufes.scap.models.User], role : String)(implicit request: RequestHeader)
+@(userForm: Form[br.ufes.scap.models.UserFormData],users : Seq[br.ufes.scap.models.User])(implicit request: RequestHeader)
 
 @import br.ufes.scap.models.TipoUsuario
 
@@ -12,7 +12,7 @@
 </form>
 
     <fieldset>
-<h1><font color="white" face="trebuchet ms">Usuários</font></h1>
+<h1><font color="white" face="trebuchet ms">Professores</font></h1>
 
 <table style="width:100%" border="5" >
 
@@ -22,12 +22,9 @@
                     <th><font color="white" face="trebuchet ms">&nbsp;&nbsp NOME &nbsp;&nbsp </th>
                     <th><font color="white" face="trebuchet ms"> &nbsp;&nbsp MATRICULA &nbsp;&nbsp </th>
                     <th><font color="white" face="trebuchet ms">&nbsp;&nbsp E-MAIL &nbsp;&nbsp</th>
-                    <th><font color="white" face="trebuchet ms">&nbsp;&nbsp TIPO &nbsp;&nbsp</th>
 			  <th><font color="white" face="trebuchet ms">&nbsp;&nbsp MANDATOS &nbsp;&nbsp</th>
+			  <th><font color="white" face="trebuchet ms">&nbsp;&nbsp PARENTESCOS &nbsp;&nbsp</th>
 			  <th><font color="white" face="trebuchet ms">&nbsp;&nbsp AFASTAMENTOS &nbsp;&nbsp</th>
-			  @if(role.equals(TipoUsuario.Sec.toString())) {
-			  <th><font color="white" face="trebuchet ms">&nbsp;&nbsp DELETAR &nbsp;&nbsp </th>
-			  }
                 </tr>
                 @for(user <- users){
                 <tr>
@@ -35,12 +32,9 @@
                     <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @user.nome &nbsp;&nbsp </font></td>
                     <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @user.matricula &nbsp;&nbsp </font></td>
                     <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @user.email &nbsp;&nbsp </font></td>
-			  <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @user.tipo &nbsp;&nbsp </font></td>
                     <td>&nbsp;&nbsp <a href="@br.ufes.scap.controllers.routes.MandatosController.showMandatosByProfessor(user.id)"><font color="yellow" face="trebuchet ms">ver mandatos</font></a>&nbsp;&nbsp</td> 
-                    <td>&nbsp;&nbsp <a href="@br.ufes.scap.controllers.routes.SolicitacoesController.showAfastamentosByProfessor(user.id)"><font color="yellow" face="trebuchet ms">ver afastamentos</font></a>&nbsp;&nbsp</td> 
-			  @if(role.equals(TipoUsuario.Sec.toString())) {
-                    <td>&nbsp;&nbsp<a onclick="return confirm('Você tem certeza de que deseja excluir esse professor?');" href="@br.ufes.scap.controllers.routes.UsersController.deleteUser(user.id)"><font color="yellow" face="trebuchet ms">deletar</font></a>&nbsp;&nbsp</td> 
-			  }
+                    <td>&nbsp;&nbsp <a href="@br.ufes.scap.controllers.routes.ParentescosController.listarParentescosByProfessor(user.id)"><font color="yellow" face="trebuchet ms">ver parentescos</font></a>&nbsp;&nbsp</td> 
+                    <td>&nbsp;&nbsp <a href="@br.ufes.scap.controllers.routes.SolicitacoesController.showAfastamentosByProfessor(user.id)"><font color="yellow" face="trebuchet ms">ver afastamentos</font></a>&nbsp;&nbsp</td>  
                 </tr>
                 }
 </table>
