--- a/app/br/ufes/scap/views/verSolicitacao.scala.html
+++ b/app/br/ufes/scap/views/verSolicitacao.scala.html
@@ -1,6 +1,6 @@
 @(solicitacao : br.ufes.scap.models.SolicitacaoFull, userTipo : String)(implicit request: RequestHeader)
 
-@import br.ufes.scap.models.{TipoUsuario, StatusSolicitacao, TipoAcessorio}
+@import br.ufes.scap.models.{TipoUsuario, StatusSolicitacao, TipoAcessorio, TipoAfastamento}
 @import java.util.Locale
 @import java.time.format.TextStyle
 
@@ -69,13 +69,35 @@
 
 <br>
 <br>
-@if(userTipo.equals(TipoUsuario.Sec.toString()) && (solicitacao.status.equals(StatusSolicitacao.Reprovada.toString()) || solicitacao.status.equals(StatusSolicitacao.AprovadaPRPPG.toString()))){
+@if( userTipo.equals(TipoUsuario.Sec.toString()) && solicitacao.status.equals(StatusSolicitacao.Bloqueada.toString()) ){
+<form role="form" action='@br.ufes.scap.controllers.routes.SolicitacoesController.aprovar(solicitacao.id)' method="get" align="center">
+                <input type="submit" onclick="confirm('Você tem certeza de que deseja APROVAR essa solicitação? Não é possível alterá-la depois.')" value="Aprovar solicitação">
+</form>
+<br>
+<br>
+}
+
+@if( userTipo.equals(TipoUsuario.Sec.toString()) && solicitacao.status.equals(StatusSolicitacao.Bloqueada.toString()) ){
+<form role="form" action='@br.ufes.scap.controllers.routes.SolicitacoesController.reprovar(solicitacao.id)' method="get" align="center">
+                <button type="submit" onclick="confirm('Você tem certeza de que deseja REPROVAR essa solicitação? Não é possível alterá-la depois.')">Reprovar solicitação</button>
+</form>
+<br>
+<br>
+}
+
+@if(userTipo.equals(TipoUsuario.Sec.toString()) && (solicitacao.status.equals(StatusSolicitacao.Reprovada.toString()) || solicitacao.status.equals(StatusSolicitacao.AprovadaPRPPG.toString()) ) ){
 <a href="@br.ufes.scap.controllers.routes.SolicitacoesController.arquivar(solicitacao.id)"><font color="yellow" face="trebuchet ms">Arquivar solicitação</font></a>
 <br>
 <br>
 }
 
-@if(userTipo.equals(TipoUsuario.Sec.toString()) && (solicitacao.status.equals(StatusSolicitacao.AprovadaDI.toString()) || solicitacao.status.equals(StatusSolicitacao.AprovadaCT.toString()))){
+@if(userTipo.equals(TipoUsuario.Sec.toString()) && (solicitacao.tipoAfastamento.equals(TipoAfastamento.Nacional.toString()) && solicitacao.status.equals(StatusSolicitacao.AprovadaDI.toString()) ) ){
+<a href="@br.ufes.scap.controllers.routes.SolicitacoesController.arquivar(solicitacao.id)"><font color="yellow" face="trebuchet ms">Arquivar solicitação</font></a>
+<br>
+<br>
+}
+
+@if(userTipo.equals(TipoUsuario.Sec.toString()) && solicitacao.tipoAfastamento.equals(TipoAfastamento.Internacional.toString()) &&(solicitacao.status.equals(StatusSolicitacao.AprovadaDI.toString()) || solicitacao.status.equals(StatusSolicitacao.AprovadaCT.toString()))){
 <a href="@br.ufes.scap.controllers.routes.PareceresDocumentoController.registrarParecerDocumentoForm(solicitacao.id)"><font color="yellow" face="trebuchet ms">Registrar parecer externo</font></a>
 <br>
 <br>
@@ -95,7 +117,7 @@
 <br>
 }
 
-@if( (userTipo.equals(TipoUsuario.Prof.toString()) || userTipo.equals(TipoAcessorio.Chefe.toString())) && (solicitacao.status.equals(StatusSolicitacao.Iniciada.toString()) || solicitacao.status.equals(StatusSolicitacao.Liberada.toString())) ){
+@if( (userTipo.equals(TipoUsuario.Prof.toString()) || userTipo.equals(TipoAcessorio.Chefe.toString())) && solicitacao.status.equals(StatusSolicitacao.Iniciada.toString()) && solicitacao.tipoAfastamento.equals(TipoAfastamento.Nacional.toString()) ){
 <a href="@br.ufes.scap.controllers.routes.PareceresController.manifestarContraForm(solicitacao.id)">
 <font color="yellow" face="trebuchet ms">Manifestar-se contra</font></a>
 <br>
