--- a/app/br/ufes/scap/views/addUser.scala.html
+++ b/app/br/ufes/scap/views/addUser.scala.html
@@ -33,7 +33,7 @@
 		<br>
 
                 <font color="white" face="trebuchet ms">E-mail&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </font>  
-                <input type="text"  id="email" name="email" value="" placeholder="Email"
+                <input type="text"  autocomplete="false" id="email" name="email" value="" placeholder="Email"
                        required>
 		<br>
 		<br>
