--- a/app/br/ufes/scap/views/login.scala.html
+++ b/app/br/ufes/scap/views/login.scala.html
@@ -9,7 +9,7 @@
 
 <body bgcolor="teal"  >
 
-<form role="form" action='@br.ufes.scap.controllers.routes.LoginController.login()' method="post" align="center">
+<form role="form" action='@br.ufes.scap.controllers.routes.LoginController.login()' method="post" align="center" autocomplete="off">
 
     <fieldset>
 
