--- a/app/br/ufes/scap/views/verSolicitacao.scala.html
+++ b/app/br/ufes/scap/views/verSolicitacao.scala.html
@@ -40,6 +40,10 @@
 }
                 </tr>
                 <tr>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp Ônus </font> </th>
+                    <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @solicitacao.onus &nbsp;&nbsp </font> </th>
+                </tr>
+                <tr>
                     <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp Tipo de Afastamento </font> </th>
                     <td><font color="white" face="trebuchet ms"> &nbsp;&nbsp @solicitacao.tipoAfastamento &nbsp;&nbsp </font> </th>
                 </tr>
